# Hosshii.github.io

./: .gitignore  Cargo.toml  index.css  index.html  index.scss
.github/workflows/: pages.yaml
src/: main.rs  nav.rs  route.rs
src/assets/data/: experiences.json  skills1.json  skills2.json  works.json
src/components/: mod.rs
src/components/common/: icon.rs  mod.rs  pagetitle.rs  raw_html.rs  sectiontitle.rs
src/components/experiences/: mod.rs
src/components/skills/: mod.rs
src/components/works/: mod.rs
src/pages/: about.rs  experiences.rs  mod.rs  secure.rs  skills.rs  video.rs  works.rs
src/utils/: mod.rs
