[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
serde = "1.0.163"
serde_json = "1.0.96"
url = { version = "2.3.1", features = ["serde"] }
yew = { version = "0.20", features = ["csr"] }
