[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.1.7"
once_cell = "1.18.0"
serde = "1.0.175"
serde_json = "1.0.97"
url = { version = "2.4.0", features = ["serde"] }
yew = { version = "0.20", features = ["csr"] }
